# orbitduck

./: .dockerignore  .gitignore  Dockerfile  README.md  SYSTEM_MAINTENANCE.md  Schema Diagram.md  docker-compose.yml  pyproject.toml  requirements.txt  test_shodan.py
config/: allowlist.txt  orbitduck.conf  risk_weights.json
scr/orbitduck/: core_runner.py  main.py  schema_merge.py
scr/orbitduck/utils/: io.py
src/: requirements.txt  sanity_check.py
src/config/: risk_weights.json
src/orbitduck/: cli.py  core_runner.py  diff_engine.py  pipeline.py  setup.py
src/orbitduck/config/: orbitduck.conf
src/orbitduck/logs/: audit_trail.jsonl
src/orbitduck/modules/: geoip_lookup.py  internetdb.py  nmap_scan.py  risk.py  shodan_search.py  spiderfoot.py  subdomain_enum.py  virustotal.py  whois_lookup.py
src/orbitduck/utils/: controls.py  diff_manager.py  logger_manager.py  mock_data.py  report_manager.py  risk_merge.py  risk_trend.py
tests/: test_smoke.py
